--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -11,6 +11,7 @@
   height: 100%;
   overflow: auto;
 }
+/* The top bar */
 .topbar {
   margin: 0;
   padding: 0;
@@ -21,6 +22,7 @@
   overflow: auto;
   z-index: 1;
 }
+/* inside the top bar */
 .innertop {
   padding-left: 65px;
   padding-right: 65px;
@@ -35,7 +37,6 @@ div.content {
   padding: 1px 16px;
   height: 1000px;
 }
-
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
 @media screen and (max-width: 700px) {
   .sidebar {
@@ -46,3 +47,9 @@ div.content {
   }
   div.content {margin-left: 0;}
 }
+/* default select element */
+select {
+  margin-left: 60px;
+  padding-left:  30px;
+  padding-right: 30px;
+ }
